; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_instr_handler.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_instr_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bc_writer = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*, i32, i32)*, i32 (%struct.bc_writer*, %struct.instruction*, i32, %struct.bytecode_buffer*)* }
%struct.instruction = type { i32, i32, i32, i64, i32 }
%struct.bytecode_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bc_writer*, %struct.instruction*, %struct.bytecode_buffer*)* @instr_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @instr_handler(%struct.bc_writer* %0, %struct.instruction* %1, %struct.bytecode_buffer* %2) #0 {
  %4 = alloca %struct.bc_writer*, align 8
  %5 = alloca %struct.instruction*, align 8
  %6 = alloca %struct.bytecode_buffer*, align 8
  %7 = alloca i32, align 4
  store %struct.bc_writer* %0, %struct.bc_writer** %4, align 8
  store %struct.instruction* %1, %struct.instruction** %5, align 8
  store %struct.bytecode_buffer* %2, %struct.bytecode_buffer** %6, align 8
  %8 = load %struct.instruction*, %struct.instruction** %5, align 8
  %9 = getelementptr inbounds %struct.instruction, %struct.instruction* %8, i32 0, i32 4
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @d3d9_opcode(i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %13 = getelementptr inbounds %struct.bc_writer, %struct.bc_writer* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32 (%struct.bc_writer*, %struct.instruction*, i32, %struct.bytecode_buffer*)*, i32 (%struct.bc_writer*, %struct.instruction*, i32, %struct.bytecode_buffer*)** %15, align 8
  %17 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %18 = load %struct.instruction*, %struct.instruction** %5, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %6, align 8
  %21 = call i32 %16(%struct.bc_writer* %17, %struct.instruction* %18, i32 %19, %struct.bytecode_buffer* %20)
  %22 = load %struct.instruction*, %struct.instruction** %5, align 8
  %23 = getelementptr inbounds %struct.instruction, %struct.instruction* %22, i32 0, i32 3
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %43

26:                                               ; preds = %3
  %27 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %28 = getelementptr inbounds %struct.bc_writer, %struct.bc_writer* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*, i32, i32)*, i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*, i32, i32)** %30, align 8
  %32 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %33 = load %struct.instruction*, %struct.instruction** %5, align 8
  %34 = getelementptr inbounds %struct.instruction, %struct.instruction* %33, i32 0, i32 2
  %35 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %6, align 8
  %36 = load %struct.instruction*, %struct.instruction** %5, align 8
  %37 = getelementptr inbounds %struct.instruction, %struct.instruction* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.instruction*, %struct.instruction** %5, align 8
  %40 = getelementptr inbounds %struct.instruction, %struct.instruction* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 %31(%struct.bc_writer* %32, i32* %34, %struct.bytecode_buffer* %35, i32 %38, i32 %41)
  br label %43

43:                                               ; preds = %26, %3
  %44 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %45 = load %struct.instruction*, %struct.instruction** %5, align 8
  %46 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %6, align 8
  %47 = call i32 @write_srcregs(%struct.bc_writer* %44, %struct.instruction* %45, %struct.bytecode_buffer* %46)
  ret void
}

declare dso_local i32 @d3d9_opcode(i32) #1

declare dso_local i32 @write_srcregs(%struct.bc_writer*, %struct.instruction*, %struct.bytecode_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
